fix: aumentando o z-index do offcanvas para a seta direita do carrosel não sobressair

--- a/css/home.css
+++ b/css/home.css
@@ -96,7 +96,7 @@
     opacity: 1;
     visibility: visible;
     /* Deixa a imagem acima dos outros elementos do slider */
-    z-index: 1;
+    z-index: 2;
     cursor: pointer;
 }
 
@@ -176,8 +176,8 @@
     width: 90%;
     height: 55%;
     margin: 10px 0;
-    cursor: pointer;
     /*Muda o cursor para a mãozinha quando passa por cima da imagem*/
+    cursor: pointer;
 }
 
 .container-card .card:hover {
